fix to add z-index to progress bar

--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ video {
   top: 15px;
   cursor: pointer;
   transition: height 0.1s ease-in-out;
+  z-index: 10;
 }
 
 .progress-range:hover {
